--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -1,2 +1,7 @@
-<h1>{{title}}</h1>
-<p>Hello {{ name }},Welcome to {{title}}</p>
+<main>
+  <link rel="stylesheet" type="text/css" href="../public/css/style.css" />
+  <script defer src="../public/js/index.js"></script>
+  <button id="fetchPhotosBtn">Fetch Photos</button>
+  <div class="photo-container" id="photoContainer"></div>
+  <p id="photoCount">Number of Photos: 0</p>
+</main>
