fixed css for handlebars
made the hbs files not dependent on location of the css/js files. they are now passed through by index.js

--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -1,6 +1,6 @@
 <main>
   <link rel="stylesheet" type="text/css" href="../public/css/style.css" />
-  <script defer src="../public/js/index.js"></script>
+  <h2>Thanks for visiting my website!</h2>
   <button id="fetchPhotosBtn">Fetch Photos</button>
   <div class="photo-container" id="photoContainer"></div>
   <p id="photoCount">Number of Photos: 0</p>
