--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -5,6 +5,13 @@
   <title>{{title}}</title>
   <link rel="icon" href="/public/favicon.ico" sizes="70x70" type="image/ico">
   <link rel='stylesheet' href='/public/css/style.css' />
+  {{#each css}}
+  <link rel='stylesheet' href='/public/css/{{this}}' />
+  {{/each}}
+
+  {{#each js}}
+  <script defer src="/public/js/{{this}}"></script>
+  {{/each}}
 </head>
 
 <body>
