--- a/application/views/login.hbs
+++ b/application/views/login.hbs
@@ -1,5 +1,4 @@
 <main>
-  <h2>Please Log In</h2>
   <form>
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required><br>
@@ -9,4 +8,8 @@
 
     <button type="submit">Log In</button>
   </form>
+  <div class="register">
+    <p>Don't have an account?</p>
+    <a href="#" class="register-btn" onclick="location.href='/register'">Register Here</a>
+  </div>
 </main>
