--- a/application/views/partials/nav.hbs
+++ b/application/views/partials/nav.hbs
@@ -1,13 +1,16 @@
 <header>
     <h1>{{title}}</h1>
+    <div class="search-bar">
+        <input type="text" placeholder="Search...">
+        <button class="search-icon"></button>
+    </div>
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/login">Login</a></li>
-            <li><a href="/register">Registration</a></li>
+            <li><a href="/profile">Profile</a></li>
             <li><a href="/postvideo">Post Video</a></li>
             <li><a href="/viewpost/1">View Post</a></li>
-            <li><a href="/profile">Profile</a></li>
         </ul>
     </nav>
 </header>
