--- a/application/public/css/style.css
+++ b/application/public/css/style.css
@@ -26,6 +26,46 @@ header h1 {
   font-size: 1.5rem;
 }
 
+/*search bar styling*/
+.search-bar {
+  display: flex;
+  align-items: center;
+  border-radius: 25px;
+  overflow: hidden;
+  background-color: #fff;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+  margin-right: 1rem;
+  width: 400px;
+  max-width: 100%;
+}
+
+.search-bar input[type="text"] {
+  flex: 1;
+  height: 40px;
+  border: none;
+  padding: 0 1rem;
+  font-size: 1.2rem;
+}
+
+.search-bar button {
+  height: 40px;
+  width: 40px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.search-bar button:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.search-icon {
+  background-image: url("/public/search-icon.png");
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 /*nav bar styling*/
 nav ul {
   list-style-type: none;
