--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -1,7 +1,3 @@
 <main>
-  <link rel="stylesheet" type="text/css" href="../public/css/style.css" />
-  <h2>Thanks for visiting my website!</h2>
-  <button id="fetchPhotosBtn">Fetch Photos</button>
-  <div class="photo-container" id="photoContainer"></div>
-  <p id="photoCount">Number of Photos: 0</p>
+  <h2>Home Page</h2>
 </main>
