milestone 3 - registration & login
added the ability to register and login, when done successfully it navigates you to an empty page (FOR NOW).
- registration saves user data in the database
- logging in validates user input from the database

--- a/application/views/login.hbs
+++ b/application/views/login.hbs
@@ -1,5 +1,5 @@
 <main>
-  <form>
+  <form action="/users/login" method="POST" enctype="application/x-www-form-urlencoded">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required><br>
 
