sessions, flash, html edits
-added sessions functionality
-added logout functionality
-profile page now displays logged in users info
-moved profile GET from index to users
-displays flash messages during login
-added dropdown menu to nav bar

--- a/application/views/partials/nav.hbs
+++ b/application/views/partials/nav.hbs
@@ -7,10 +7,13 @@
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/profile">Profile</a></li>
             <li><a href="/postvideo">Post Video</a></li>
             <li><a href="/viewpost/1">View Post</a></li>
+            {{#if isLoggedIn}}
+                {{> dropdown}}
+            {{else}}
+                <li><a href="/login">Login</a></li>
+            {{/if}}
         </ul>
     </nav>
 </header>
