--- a/application/views/profile.hbs
+++ b/application/views/profile.hbs
@@ -1,8 +1,8 @@
 <main>
   <section>
     <h1>User Profile</h1>
-    <p>Username: john123</p>
-    <p>Email: john123@gmail.com</p>
+    <p>Username: {{user.username}}</p>
+    <p>Email: {{user.email}}</p>
 
     <h2>Posts</h2>
     <ul>
