--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -5,6 +5,8 @@
   <title>{{title}}</title>
   <link rel="icon" href="/public/favicon.ico" sizes="70x70" type="image/ico">
   <link rel='stylesheet' href='/public/css/style.css' />
+  <link rel='stylesheet' href='/public/css/flashmessage.css' />
+  <link rel='stylesheet' href='/public/css/dropdown.css' />
   {{#each css}}
   <link rel='stylesheet' href='/public/css/{{this}}' />
   {{/each}}
@@ -15,6 +17,9 @@
 </head>
 
 <body>
+  {{#if (nonEmptyObject messages)}}
+    {{> flashmessage this}}
+  {{/if}}
   {{> header}}
   {{> nav}}
   {{{body}}}
