color theme & viewpost changes
- changed color theme of website to olive green + orange.
- changed viewpost formatting to a more youtube-like format.
- fixed contact link in footer.

--- a/application/views/partials/footer.hbs
+++ b/application/views/partials/footer.hbs
@@ -1,5 +1,5 @@
 <footer>
-    <p>Aneesh Kumar <span>&copy</span> <a class="contact-link" href="mailto:your-email@example.com">Contact</a></p>
+    <p>Aneesh Kumar <span>&copy</span> <a class="contact-link" href="mailto:aneesh.x.kumar@gmail.com">Contact</a></p>
 </footer>
 <style>
     a.contact-link {
