--- a/application/public/css/viewpost.css
+++ b/application/public/css/viewpost.css
@@ -1,10 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Akshar:wght@500&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Akshar', sans-serif;
+    font-size: 16px;
+    color: #333;
+    background-color: #F5F5F5;
+}
+
 main {
-    max-width: 800px;
-    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .video-container {
-    margin-bottom: 30px;
+    width: 100%;
+    height: 600px;
+    margin: 0;
+    padding: 0;
+    border: 2px solid #E1AD01;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.video-container iframe {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.post-section {
+    margin-top: 1%;
+    margin-left: 0px;
+    border-top: 2px solid #E1AD01;
+    padding: 10px;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.post-content {
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 .post-title {
@@ -14,15 +57,28 @@ main {
 
 .post-date {
     font-style: italic;
-    margin-top: 0;
+    margin-left: 2%;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 
-.post-content {
+.post-description {
+    margin-left: 2%;
     line-height: 1.5;
+    margin-bottom: 1%;
 }
 
 .comment-section {
-    margin-top: 50px;
+    margin-top: 1%;
+    margin-left: 0px;
+    border-top: 2px solid #E1AD01;
+    padding: 10px;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.comment {
+    margin-left: 5%;
 }
 
 .comment-header {
