--- a/application/views/viewpost.hbs
+++ b/application/views/viewpost.hbs
@@ -1,42 +1,41 @@
 <main>
   <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/CpKofdye1eg" title="video player"
+    <iframe width="100%" height="600" src="https://www.youtube.com/embed/CpKofdye1eg" title="video player"
       frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
   </div>
-
-  <div class="post-container">
-    <h1 class="post-title">Title of the Blog Post</h1>
-    <p class="post-date">Posted on January 1, 2023</p>
-    <p class="post-content">description</p>
-  </div>
-
-  <div class="comment-section">
-    <h2>Comments</h2>
-
-    <div class="comment">
-      <div class="comment-header">
-        <span class="comment-username">@USERNAME</span>
-        <span class="comment-date">DATE</span>
-      </div>
-      <div class="comment-body">
-        <p>COMMENT</p>
-      </div>
+  <div class="post-section">
+    <div class="post-content">
+      <h1 class="post-title">Title of the Blog Post</h1>
+      <p class="post-date">Posted on January 1, 2023</p>
+      <p class="post-description">description</p>
     </div>
+    <div class="comment-section">
+      <h2>Comments</h2>
+      <div class="comment">
+        <div class="comment-header">
+          <span class="comment-username">@USERNAME</span>
+          <span class="comment-date">DATE</span>
+        </div>
+        <div class="comment-body">
+          <p>COMMENT</p>
+        </div>
+      </div>
 
-    <div class="comment">
-      <div class="comment-header">
-        <span class="comment-username">@USERNAME</span>
-        <span class="comment-date">DATE</span>
+      <div class="comment">
+        <div class="comment-header">
+          <span class="comment-username">@USERNAME</span>
+          <span class="comment-date">DATE</span>
+        </div>
+        <div class="comment-body">
+          <p>COMMENT</p>
+        </div>
       </div>
-      <div class="comment-body">
-        <p>COMMENT</p>
-      </div>
+
+      <form class="comment-form">
+        <textarea id="comment-input" name="comment-input" placeholder="Add a comment"></textarea>
+        <button type="submit" class="comment-submit">Comment</button>
+      </form>
     </div>
-
-    <form class="comment-form">
-      <textarea id="comment-input" name="comment-input" placeholder="Add a comment"></textarea>
-      <button type="submit" class="comment-submit">Comment</button>
-    </form>
   </div>
 </main>
