--- a/application/public/css/viewpost.css
+++ b/application/public/css/viewpost.css
@@ -1,22 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Akshar:wght@500&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Akshar', sans-serif;
-    font-size: 16px;
-    color: #333;
-    background-color: #F5F5F5;
-}
-
 main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    background-color: #F5F5F5;
 }
 
 .video-container {
@@ -24,7 +12,6 @@ main {
     height: 600px;
     margin: 0;
     padding: 0;
-    border: 2px solid #E1AD01;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
@@ -34,51 +21,82 @@ main {
 .video-container iframe {
     max-width: 100%;
     max-height: 100%;
+    border: none;
 }
 
 .post-section {
     margin-top: 1%;
-    margin-left: 0px;
     border-top: 2px solid #E1AD01;
-    padding: 10px;
     box-sizing: border-box;
     width: 100%;
 }
 
-.post-content {
-    padding: 10px;
-    box-sizing: border-box;
-}
-
-.post-title {
+.title {
     font-size: 28px;
     margin-top: 0;
+    padding-top: 10px;
 }
 
 .post-date {
     font-style: italic;
-    margin-left: 2%;
-    margin-top: 1%;
-    margin-bottom: 1%;
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 .post-description {
-    margin-left: 2%;
+    margin-left: 20px;
     line-height: 1.5;
-    margin-bottom: 1%;
+    margin-bottom: 10px;
 }
 
 .comment-section {
-    margin-top: 1%;
+    margin-top: 20px;
     margin-left: 0px;
-    border-top: 2px solid #E1AD01;
     padding: 10px;
     box-sizing: border-box;
     width: 100%;
+    border-top: 2px solid #E1AD01;
+}
+
+.comment-form {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.comment-form input {
+    font-family: 'Akshar';
+    border: none;
+    background-color: #F5F5F5;
+    border-bottom: 1px solid #E1AD01;
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.comment-form input:focus {
+    outline: none;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: 2px solid #E1AD01;
+}
+
+
+.comment-form button {
+    font-family: 'Akshar';
+    padding: 10px;
+    margin-left: 10px;
+    background-color: #E1AD01;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .comment {
-    margin-left: 5%;
+    margin-top: 20px;
 }
 
 .comment-header {
@@ -95,6 +113,15 @@ main {
     font-style: italic;
 }
 
-.comment-form {
-    margin-top: 20px;
+.comment-body {
+    margin-left: 20px;
+    line-height: 1.5;
+}
+
+.comment-avatar {
+    width: 30px;
+    height: 30px;
+    border: 1px solid #E1AD01;
+    margin-right: 10px;
+    background-color: #fff;
 }
