--- a/application/views/postvideo.hbs
+++ b/application/views/postvideo.hbs
@@ -1,20 +1,19 @@
 <main>
-	<section>
-		<h2>Post a Video</h2>
+	<section class="postvideo-section">
+		<h2 class="postvideo-title">Post a Video</h2>
 		<form action="postvideo_submit.html" method="post">
-			<label for="post-title">Title:</label>
-			<input type="text" id="post-title" name="post-title" required>
+			<label class="postvideo-label" for="post-title">Title:</label>
+			<input class="postvideo-input" type="text" id="post-title" name="post-title" required>
 			<br>
-			<label for="post-description">Description:</label>
-			<textarea id="post-description" name="post-description" required></textarea>
+			<label class="postvideo-label" for="post-description">Description:</label>
+			<textarea class="postvideo-input" id="post-description" name="post-description" required></textarea>
 			<br>
-			<label for="video-file">Video:</label>
-			<input type="file" id="video-file" name="video-file" accept="video/*" required>
+			<label class="postvideo-label" for="video-file">Video:</label>
+			<input class="postvideo-input" type="file" id="video-file" name="video-file" accept="video/*" required>
 			<br>
-			<label for="accept-policy">Acceptable Use Policy:</label>
-			<input type="checkbox" id="accept-policy" name="accept-policy" required>
-			<br>
-			<input type="submit" value="Submit">
+			<a href="#">Acceptable Use Policy</a>
+			<input type="checkbox" class="postvideo-checkbox" id="accept-policy" name="accept-policy" required>
+			<input class="postvideo-submit" type="submit" value="Submit">
 		</form>
 	</section>
 </main>
