major functionality added
- users can now post videos
- users can now view posts (can not search/browse for them yet,  must type the link into url bar)
- users can comment on posts if logged in
- users can delete posts (no button,  but  /deletepost/[postid] works, no authentication yet)

--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -18,12 +18,22 @@
 
 <body>
   {{#if (nonEmptyObject messages)}}
-    {{> flashmessage this}}
+  {{> flashmessage this}}
   {{/if}}
   {{> header}}
   {{> nav}}
   {{{body}}}
   {{> footer}}
 </body>
+<section class="flash-message">
+  {{#if successMessage}}
+  <div class="success-message">{{successMessage}}</div>
+  {{/if}}
+
+  <!-- Error flash message -->
+  {{#if errorMessage}}
+  <div class="error-message">{{errorMessage}}</div>
+  {{/if}}
+</section>
 
 </html>
