--- a/application/public/css/viewpost.css
+++ b/application/public/css/viewpost.css
@@ -16,13 +16,15 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: black;
 }
 
-.video-container iframe {
+.video-container video {
     max-width: 100%;
     max-height: 100%;
     border: none;
 }
+
 
 .post-section {
     margin-top: 1%;
