changed layouts & added functionality
- added profile pictures
- changed homepage layout
- flash messages (in progress)

--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -1,3 +1,17 @@
 <main>
   <h2>Home Page</h2>
+  <div class="video-grid">
+    <div class="video-card">
+      <img src="video1.mp4" controls></img>
+    </div>
+    <div class="video-card">
+      <img src="video2.mp4" controls></img>
+    </div>
+    <div class="video-card">
+      <img src="video3.mp4" controls></img>
+    </div>
+    <div class="video-card">
+      <img src="video4.mp4" controls></img>
+    </div>
+  </div>
 </main>
