--- a/application/views/registration.hbs
+++ b/application/views/registration.hbs
@@ -18,13 +18,10 @@
 			<input type="password" id="confirm-password" name="confirm-password" required>
 			<br>
 
-			<label for="age">I am 13 years of age or older:</label>
-			<input type="checkbox" id="age" name="age" required>
-			<br>
+			<label for="age">I am 13 years of age or older: <input type="checkbox" id="age" name="age" required></label>
 
-			<label for="tos">I accept the <a href="#">TOS</a> and <a href="#">Privacy Rules</a>:</label>
-			<input type="checkbox" id="tos" name="tos" required>
-			<br>
+			<label for="tos">I accept the <a href="#">TOS</a> and <a href="#">Privacy Rules</a>: <input type="checkbox"
+					id="tos" name="tos" required></label>
 
 			<input type="submit" value="Register">
 		</form>
