--- a/application/public/css/style.css
+++ b/application/public/css/style.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Akshar', sans-serif;
 }
 
 body {
@@ -30,6 +31,7 @@ header {
 header h1 {
   display: inline;
   font-size: 1.5rem;
+  margin-right: 1.5rem;
 }
 
 input[type="text"] {
@@ -38,6 +40,7 @@ input[type="text"] {
 
 /*search bar styling*/
 .search-bar {
+  flex-grow: 1;
   display: flex;
   align-items: center;
   border-radius: 25px;
@@ -128,98 +131,4 @@ footer {
   text-align: center;
   margin-top: auto;
   width: 100%;
-}
-
-/*photo gallery styling*/
-.photo-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 10px;
-  justify-items: center;
-  padding: 20px;
-}
-
-.photo-card {
-  width: 200px;
-  padding: 10px;
-  border: 1px solid #5596e6;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  cursor: pointer;
-  transition: opacity 0.5s;
-}
-
-.photo-card:hover {
-  opacity: 0.8;
-}
-
-.photo-card h3 {
-  font-size: 1.2rem;
-  color: #333;
-  margin-bottom: 0.5rem;
-}
-
-.photo-card p {
-  font-size: 1rem;
-  color: #777;
-  margin-bottom: 1rem;
-}
-
-.photo-card button {
-  padding: 0.5rem 1rem;
-  border: none;
-  background-color: #41d6c3;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color 0.5s;
-}
-
-.photo-card button:hover {
-  background-color: #2dc3b2;
-}
-
-.form-container {
-  max-width: 500px;
-  margin: 0 auto;
-  padding: 2rem;
-  background-color: #fff;
-  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  margin-top: 2rem;
-}
-
-.form-field {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1rem;
-}
-
-.form-field label {
-  font-size: 1.2rem;
-  margin-bottom: 0.5rem;
-}
-
-.form-field input[type="text"],
-.form-field input[type="email"],
-.form-field input[type="password"] {
-  padding: 0.5rem;
-  font-size: 1rem;
-  border-radius: 5px;
-  border: none;
-  background-color: #f2f2f2;
-}
-
-.form-field input[type="submit"] {
-  padding: 0.5rem 1rem;
-  border: none;
-  background-color: #5596e6;
-  color: #fff;
-  cursor: pointer;
-  transition: background-color 0.5s;
-  margin-top: 1rem;
-}
-
-.form-field input[type="submit"]:hover {
-  background-color: #3d70b2;
 }
