--- a/application/views/viewpost.hbs
+++ b/application/views/viewpost.hbs
@@ -2,6 +2,7 @@
   <div class="video-container">
     <video width="100%" height="600" controls>
       <source src="http://localhost:3000/public{{post.video}}" type="video/mp4">
+      <source src="http://localhost:3000/public{{post.video}}" type="video/quicktime">
       Your browser does not support the video tag.
     </video>
   </div>
