video thumbnails & flash fixes
- added thumbnails to all videos
- home page now populates with all videos
- flash messages fully work now

--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -1,17 +1,10 @@
 <main>
-  <h2>Home Page</h2>
-  <div class="video-grid">
-    <div class="video-card">
-      <img src="video1.mp4" controls></img>
-    </div>
-    <div class="video-card">
-      <img src="video2.mp4" controls></img>
-    </div>
-    <div class="video-card">
-      <img src="video3.mp4" controls></img>
-    </div>
-    <div class="video-card">
-      <img src="video4.mp4" controls></img>
-    </div>
-  </div>
+  <h2>Home Page {{this.thumbnail}}</h2>
+  {{#each videos}}
+      <div class="video-card">
+        <a href="/viewpost/{{this.id}}">
+          <img src="{{this.thumbnail}}" alt="Video Thumbnail" controls>
+        </a>
+      </div>
+    {{/each}}
 </main>
