--- a/application/views/partials/flashmessage.hbs
+++ b/application/views/partials/flashmessage.hbs
@@ -10,7 +10,7 @@
 <div id="flash-message" class="success">{{flash.success}}</div>
 {{/if}}
 
-{{#if messages.error}}
+{{#if flash.error}}
 <div id="flash-message" class="error">{{flash.error}}</div>
 {{/if}}
 
