--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -7,6 +7,7 @@
   <link rel='stylesheet' href='/public/css/style.css' />
   <link rel='stylesheet' href='/public/css/flashmessage.css' />
   <link rel='stylesheet' href='/public/css/dropdown.css' />
+  <link rel='stylesheet' href='/public/js/index.js' />
   {{#each css}}
   <link rel='stylesheet' href='/public/css/{{this}}' />
   {{/each}}
