--- a/application/public/css/dropdown.css
+++ b/application/public/css/dropdown.css
@@ -1,43 +1,42 @@
-/* dropdown styling */
 .dropdown {
-    position: relative;
-    display: inline-block;
-    margin-left: 1rem;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    z-index: 1;
-    background-color: #fff;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    min-width: 120px;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
-  .dropdown-content a {
-    color: #333;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #f1f1f1;
-    color: #444;
-  }
-  
-  .dropdown-text {
-    font-size: 1.1rem;
-    color: #fff;
-    display: inline-block;
-    padding-right: 1rem;
-    cursor: pointer;
-  }
-  
-  .dropdown:hover .dropdown-text {
-    color: #ccc;
-  }
+  position: relative;
+  display: inline-block;
+  margin-left: 1rem;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  background-color: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  min-width: 120px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content a {
+  color: #333;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+  color: #444;
+}
+
+.dropdown-text {
+  font-size: 1.1rem;
+  color: #fff;
+  display: inline-block;
+  padding-right: 1rem;
+  cursor: pointer;
+}
+
+.dropdown:hover .dropdown-text {
+  color: #ccc;
+}
