--- a/application/public/css/index.css
+++ b/application/public/css/index.css
@@ -2,6 +2,7 @@ main h2 {
     font-size: 6rem;
     text-align: center;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+    border-bottom: 0.5rem solid #E1AD01;
 }
 
 .video-grid {
@@ -11,12 +12,52 @@ main h2 {
 }
 
 .video-card {
-    display: flex;
-    width: 100%;
-    border: 0.5rem solid #E1AD01;
+    position: relative;
+    display: inline-block;
+    border: 0.5rem solid #525c4f;
     border-radius: 0.5rem;
+    width: 100%;
+    max-width: 300px;
+    box-sizing: border-box;
+    margin: 10px;
+    overflow: hidden;
 }
 
 .video-card img {
     width: 100%;
+    display: block;
+}
+
+.thumbnail-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: opacity 0.3s ease;
+}
+
+.video-card:hover .thumbnail-overlay {
+    opacity: 1;
+}
+
+.overlay-button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 5px;
+    background-color: #fff;
+    color: #000;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.view-button {
+    background-color: #476ebb;
+    ;
+    color: #fff;
 }
