--- a/application/public/css/login.css
+++ b/application/public/css/login.css
@@ -7,7 +7,7 @@ h2 {
     margin-bottom: 2rem;
 }
 
-form {
+#login-form {
     max-width: 400px;
     margin: 2rem auto;
     padding: 1rem;
@@ -15,20 +15,20 @@ form {
     box-shadow: 0 2px 4px #444;
 }
 
-form label {
+#login-form label {
     display: block;
     margin: 0.5rem 0;
     text-align: left;
 }
 
-form input {
+#login-form input {
     width: 100%;
     padding: 0.5rem;
     margin-bottom: 1rem;
     font-size: 1rem;
 }
 
-form button {
+#login-form button {
     display: inline-block;
     padding: 0.5rem 1rem;
     font-size: 1rem;
@@ -39,20 +39,20 @@ form button {
     margin-top: 1rem;
 }
 
-form button:hover {
+#login-form button:hover {
     background-color: #333;
 }
 
-.register {
+#register-section {
     margin-top: 1rem;
 }
 
-.register p {
+#register-section p {
     display: inline-block;
     margin-right: 0.5rem;
 }
 
-.register-btn {
+#register-btn {
     display: inline-block;
     padding: 0.5rem 1rem;
     font-size: 1rem;
@@ -62,6 +62,6 @@ form button:hover {
     cursor: pointer;
 }
 
-.register-btn:hover {
+#register-btn:hover {
     background-color: #333;
 }
