--- a/application/views/login.hbs
+++ b/application/views/login.hbs
@@ -1,5 +1,5 @@
-<main>
-  <form action="/users/login" method="POST" enctype="application/x-www-form-urlencoded">
+<main id="login-main">
+  <form id="login-form" action="/users/login" method="POST" enctype="application/x-www-form-urlencoded">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required><br>
 
@@ -8,8 +8,8 @@
 
     <button type="submit">Log In</button>
   </form>
-  <div class="register">
+  <div id="register-section">
     <p>Don't have an account?</p>
-    <a href="#" class="register-btn" onclick="location.href='/register'">Register Here</a>
+    <a href="#" id="register-btn" onclick="location.href='/register'">Register Here</a>
   </div>
 </main>
