--- a/application/views/registration.hbs
+++ b/application/views/registration.hbs
@@ -1,7 +1,7 @@
 <main>
-	<section>
+	<section id="register-section">
 		<h2>Register for an Account</h2>
-		<form action="/users/register" method="POST" enctype="application/x-www-form-urlencoded">
+		<form id="register-form" action="/users/register" method="POST" enctype="application/x-www-form-urlencoded">
 			<label for="username">Username:</label>
 			<input type="text" id="username" name="username" required>
 			<br>
